drug discovery example added

--- a/X_01_BOCS.ipynb
+++ b/X_01_BOCS.ipynb
@@ -1578,10 +1578,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "3eea092a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BOCS' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [75]\u001b[0m, in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m orc1 \u001b[38;5;241m=\u001b[39m Oracle(fun\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;28msum\u001b[39m([coef[i] \u001b[38;5;241m*\u001b[39m x[i] \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(x)\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)]), \n\u001b[1;32m      4\u001b[0m               sigma_2\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3.0\u001b[39m, \n\u001b[1;32m      5\u001b[0m               N_total\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100_000\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# BOCS\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m bocs \u001b[38;5;241m=\u001b[39m \u001b[43mBOCS\u001b[49m(oracle\u001b[38;5;241m=\u001b[39morc1, N\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m200\u001b[39m, B\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m, T\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# initial D_{0}\u001b[39;00m\n\u001b[1;32m     11\u001b[0m X \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mbinomial(n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,p\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, size\u001b[38;5;241m=\u001b[39mn\u001b[38;5;241m*\u001b[39md)\u001b[38;5;241m.\u001b[39mreshape((n,d))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'BOCS' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Oracle\n",
     "coef = np.random.normal(loc=0, scale=5, size=1+d+math.comb(d,2))\n",
@@ -1603,6 +1615,14 @@
     "for k in range(10):\n",
     "    x_new, y_new = bocs.update()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41749612",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
